<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundo"
        tools:context=".activity.MainActivity">

    <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            android:contentDescription="@string/app_name"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp" android:id="@+id/linearLayout"
            android:padding="8dp">
        <Button
                android:onClick="abrirTelaLogin"
                android:text="@string/login"
                android:layout_width="match_parent" android:layout_marginEnd="4dp"
                android:layout_height="wrap_content" android:id="@+id/button" android:layout_weight="1"
                android:background="@color/btnLogin" android:minHeight="48dp" app:backgroundTint="@color/btnLogin"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>
        <Button
                android:onClick="abrirTelaCadastro"
                android:text="@string/register" android:textColor="@color/white"
                android:layout_width="match_parent" android:layout_marginStart="4dp"
                android:layout_height="wrap_content" android:id="@+id/button2" android:layout_weight="1"
                android:background="@color/btnCadastar" android:minHeight="48dp"
                app:backgroundTint="@color/btnCadastar" style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>