<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activity.PassengerActivity">

    <include android:layout_width="match_parent" android:layout_height="match_parent"
             layout="@layout/content_map"/>
    <LinearLayout
            android:id="@+id/linearLayoutDestino"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="80dp"
            android:background="@color/white"
            android:padding="8dp">
        <EditText
                android:id="@+id/editLocal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:hint="@string/my_location"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="18sp"
                android:drawableStart="@drawable/circulo_verde"
                android:drawablePadding="6dp"
                android:background="@color/white"
        />
        <EditText
                android:id="@+id/editDestino"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/enter_your_destination"
                android:textColor="@android:color/darker_gray"
                android:drawableTint="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="18sp"
                android:drawableStart="@drawable/circulo_verde"
                android:drawablePadding="6dp"
                android:background="@color/white"
        />
    </LinearLayout>
    <Button
            android:text="@string/call"
            android:layout_gravity="bottom"
            android:layout_height="60dp"
            android:layout_width="match_parent" android:id="@+id/btnChamarUber"
            app:backgroundTint="@color/colorPrimaryDark"
            style="@style/botaoPadrao"
    />
</androidx.coordinatorlayout.widget.CoordinatorLayout>